Update and rename html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,6 @@
 
  	<br><br>
 
- 	<script type="text/javascript" src="e2_library.js"></script>
+ 	<script type="text/javascript" src="library.js"></script>
  </body>
 </html>
