--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<title>BookFlix</title>
-	<link rel="stylesheet" type="text/css" href="e2_style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
  </head>
  <body>
